[gd_scene load_steps=5 format=3 uid="uid://ckfit17obpcsi"]

[ext_resource type="FontFile" uid="uid://cc30qdd0p2cgs" path="res://Fonts/Gluten-Bold.ttf" id="1_dq5ee"]
[ext_resource type="Script" path="res://Scripts/UI Panel/world_menu.gd" id="1_hpigj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h67ig"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="FontVariation" id="FontVariation_k7a2x"]
base_font = ExtResource("1_dq5ee")

[node name="WorldMenu" type="Panel" node_paths=PackedStringArray("DefaultSubpanel", "DeletionCheckSubpanel", "NameEdit", "AddressEdit", "PortSpinBox")]
offset_right = 800.0
offset_bottom = 450.0
theme_override_styles/panel = SubResource("StyleBoxFlat_h67ig")
script = ExtResource("1_hpigj")
DefaultSubpanel = NodePath("Default")
DeletionCheckSubpanel = NodePath("DeletionCheck")
NameEdit = NodePath("Default/VBoxContainer/ControlName/WorldNameEdit")
AddressEdit = NodePath("Default/VBoxContainer/ControlAddress/AddressEdit")
PortSpinBox = NodePath("Default/VBoxContainer/ControlPort/PortSpinBox")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -271.0
offset_top = 16.0
offset_right = 272.0
offset_bottom = 76.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.8, 1, 0.847059, 1)
theme_override_fonts/font = SubResource("FontVariation_k7a2x")
theme_override_font_sizes/font_size = 41
text = "World Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Default" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Back" type="Button" parent="Default"]
layout_mode = 0
offset_left = 16.0
offset_top = 9.0
offset_right = 77.0
offset_bottom = 49.0
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="Default"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 360.0
offset_top = 99.0
offset_right = 400.0
offset_bottom = 169.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 35

[node name="ControlName" type="Control" parent="Default/VBoxContainer"]
layout_mode = 2

[node name="WorldNameEdit" type="LineEdit" parent="Default/VBoxContainer/ControlName"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -16.0
offset_right = 126.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "Wonderful World"
alignment = 1

[node name="NameTxt" type="Label" parent="Default/VBoxContainer/ControlName"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.0
offset_top = -15.0
offset_right = -65.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "Name:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ControlAddress" type="Control" parent="Default/VBoxContainer"]
layout_mode = 2

[node name="AddressEdit" type="LineEdit" parent="Default/VBoxContainer/ControlAddress"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -16.0
offset_right = 126.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "IP"
alignment = 1

[node name="AdressTxt" type="Label" parent="Default/VBoxContainer/ControlAddress"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.0
offset_top = -15.0
offset_right = -65.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "Address:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ControlPort" type="Control" parent="Default/VBoxContainer"]
layout_mode = 2

[node name="PortSpinBox" type="SpinBox" parent="Default/VBoxContainer/ControlPort"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -16.0
offset_right = 125.5
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
max_value = 65535.0
value = 37979.0
alignment = 1

[node name="PortTxt" type="Label" parent="Default/VBoxContainer/ControlPort"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.0
offset_top = -14.0
offset_right = -65.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
text = "Port:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="Default"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 256.0
offset_top = 344.0
offset_right = 297.0
offset_bottom = 375.0
grow_horizontal = 2
grow_vertical = 0
text = "Play"

[node name="CopyButton" type="Button" parent="Default"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 346.0
offset_top = 344.0
offset_right = 393.0
offset_bottom = 375.0
grow_horizontal = 2
grow_vertical = 0
text = "Copy"

[node name="DeleteButton" type="Button" parent="Default"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 446.0
offset_top = 344.0
offset_right = 505.0
offset_bottom = 375.0
grow_horizontal = 2
grow_vertical = 0
text = "Delete"

[node name="DeletionCheck" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="DeletionCheck"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -259.0
offset_top = -38.0
offset_right = 261.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
text = "Are you sure? This cannot be undone."
horizontal_alignment = 1

[node name="FinalDeleteButton" type="Button" parent="DeletionCheck"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 14.0
offset_right = 79.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
text = "Delete"

[node name="CancelButton" type="Button" parent="DeletionCheck"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = 14.0
offset_right = -30.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
text = "Cancel"

[connection signal="button_down" from="Default/Back" to="." method="_on_back_button_down"]
[connection signal="text_changed" from="Default/VBoxContainer/ControlName/WorldNameEdit" to="." method="_on_world_name_edit_text_changed"]
[connection signal="text_changed" from="Default/VBoxContainer/ControlAddress/AddressEdit" to="." method="_on_address_edit_text_changed"]
[connection signal="value_changed" from="Default/VBoxContainer/ControlPort/PortSpinBox" to="." method="_on_port_spin_box_value_changed"]
[connection signal="button_down" from="Default/PlayButton" to="." method="_on_play_button_button_down"]
[connection signal="button_down" from="Default/CopyButton" to="." method="_on_copy_button_button_down"]
[connection signal="button_down" from="Default/DeleteButton" to="." method="_on_delete_button_button_down"]
[connection signal="button_down" from="DeletionCheck/FinalDeleteButton" to="." method="_on_final_delete_button_button_down"]
[connection signal="button_down" from="DeletionCheck/CancelButton" to="." method="_on_cancel_button_button_down"]
